--- a/vt_manager/src/python/vt_manager/views/static/media/css/ofelia.css
+++ b/vt_manager/src/python/vt_manager/views/static/media/css/ofelia.css
@@ -15,6 +15,11 @@ body {
 html form {
 	display: inline; margin: 0;
 }
+
+input {
+        max-width:200px;
+}
+
 #fancypage {
     background-color: #FFFFFF;
     padding: 10px 0 0 0;
